--- a/arena-large_3_drive_0.0_-1.0_0.0_1.0_2023-06-09_11-55-21/metadata.yaml
+++ b/arena-large_3_drive_0.0_-1.0_0.0_1.0_2023-06-09_11-55-21/metadata.yaml
@@ -2,7 +2,7 @@ rosbag2_bagfile_information:
   version: 4
   storage_identifier: sqlite3
   relative_file_paths:
-    - arena-large_3_drive_0.0_-1.0_0.0_1.0_2023-06-09_11:55:21_0.db3
+    - arena-large_3_drive_0.0_-1.0_0.0_1.0_2023-06-09_11-55-21_0.db3
   duration:
     nanoseconds: 66101622573
   starting_time:
